# hoomd4.2.1-mod

./: Deepak_reference_filelist_BDshear.txt  PotentialPair-Emanuela-incorrectly-commented.h  PotentialPair-Emanuela.h  PotentialPair-Harmonic.h  PotentialPairDPDThermo-Emanuela.h  PotentialPairDPDThermo-Harmonic.h  README.md  changelog-BDshear.md  changelog.md  citation-guide.md  diameter_update_checklist.md  file-update-checklist.md  installing-base-hoomd4.2.1.md
BDshear-scripts/: install-hoomd-BDshear  job-shear-BD-copy  sim-shear-constant.py  sim_shear-copy.py  update-hoomd-BDshear
admin/: README.md  adding-changes.md  pull-request-template.md  upgrading-to-new-hoomdblue.md
admin/comparing-versions/: README.md
background-reading/: README.md
hoomd-4.2.1-procf/: edgelist0.csv
hoomd-4.2.1-procf/hoomd/: AngleMap.h  BoxResizeUpdater.cc  BoxResizeUpdater.h  BoxShearUpdater.cc  BoxShearUpdater.h  CMakeLists.txt  Communicator.cc  Communicator.h  CommunicatorGPU.cc  CommunicatorGPU.cu  CommunicatorGPU.cuh  CommunicatorGPU.h  ForceCompute.cc  ForceCompute.h  GSDDequeWriter.h  GSDDumpWriter.cc  HOOMDMPI.h  Integrator.cc  Integrator.h  ParticleData.cc  ParticleData.cu  ParticleData.cuh  ParticleData.h  SFCPackTuner.cc  StretchMap.h  Variant.cc  Variant.h  module.cc  variant.py
hoomd-4.2.1-procf/hoomd/update/: CMakeLists.txt  __init__.py  box_resize.py  box_shear.py
hoomd-4.2.1-props/hoomd/: BoxResizeUpdater.h  Communicator.cc  Communicator.h  ForceCompute.cc  ForceCompute.h  Integrator.cc  ParticleData.cc  ParticleData.h
scripts/: README.md
(+340 files in other folders)
